--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,20 +35,17 @@ jobs:
       - name: Checkout source
         uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
+      - name: Log in to DockerHub
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and push
-        uses: docker/build-push-action@v6
-        with:
-          context: .
-          push: true
-          tags: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/ci-cd-flask-demo:latest
-            ${{ secrets.DOCKERHUB_USERNAME }}/ci-cd-flask-demo:${{ github.sha }}
+      - name: Build Docker image
+        run: docker build -t my-flask-app:latest .
+
+      - name: Push Docker image
+        run: |
+          docker tag my-flask-app:latest ${{ secrets.DOCKERHUB_USERNAME }}/my-flask-app:latest
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/my-flask-app:latest
+
