--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,11 +1,10 @@
-name: CI/CD - Build, Test, and Push Docker Image
+name: CI/CD Pipeline
 
 on:
   push:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-  workflow_dispatch: {}
 
 jobs:
   build-and-test:
@@ -15,9 +14,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
+          python-version: "3.x"
 
       - name: Install dependencies
         run: |
@@ -38,14 +37,13 @@ jobs:
       - name: Log in to DockerHub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
       - name: Build Docker image
-        run: docker build -t my-flask-app:latest .
+        run: docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/my-flask-app:latest .
 
       - name: Push Docker image
-        run: |
-          docker tag my-flask-app:latest ${{ secrets.DOCKERHUB_USERNAME }}/my-flask-app:latest
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/my-flask-app:latest
+        run: docker push ${{ secrets.DOCKER_HUB_USERNAME }}/my-flask-app:latest
+
 
